--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,7 @@
 <div class="intro">
     <div class="wrapper">
         <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6">
                 <div class="intro-content">
                     <div class="intro-tag tag">Акция</div>
                     <h1 class="title intro-title">Диагностика зрения
@@ -20,7 +20,7 @@
                 </div>
 
             </div>
-            <div class="col-6">
+            <div class="col-lg-6">
                 <div class="intro-img">
                     <img src="img/intro.png" alt="intro">
                 </div>
@@ -113,7 +113,7 @@
     <div class="wrapper">
         <div class="med-center__inner">
             <div class="row">
-                <div class="col-6 med-center__text">
+                <div class="col-lg-6 col-md-9 med-center__text">
                     <h3 class="med-center__title"> Центр лечения зрения «Вита-Мед»</h3>
                     <p class="med-center__desc">Это команда лучших специалистов с многолетней успешной практикой.</p>
                     <p class="med-center__desc">Наши врачи не только лечат, они помогают сохранить здоровье и находят
@@ -464,7 +464,7 @@
     <div class="wrapper">
         <div class="reference__inner">
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6">
                     <h2 class="title mb-8">Справка</h2>
                     <p class="desc">Глазная патология у детей очень многообразна и зачастую неуловима для не
                         специалиста. Для того, чтобы убедиться в том, что у вашего малыша все в порядке со зрением, а в
@@ -483,7 +483,7 @@
                         Именно в детстве можно справиться с большинством заболеваний, <b>не прибегая к хирургическому
                             вмешательству.</b></p>
                 </div>
-                <div class="col-6">
+                <div class="col-6 d-lg-block">
                     <div class="reference__img">
                         <img src="img/reference.png" class="reference__img-1" alt="reference">
                         <img src="img/reference-bg.png" class="reference__img-2" alt="reference">
@@ -501,7 +501,7 @@
                 современного оборудования из США,
                 Южной Кореи и отечественных производителей.</p>
             <div class="row equipment__list">
-                <div class="col-3">
+                <div class="col-lg-3">
                     <div class="equipment__item-big">
                         <div class="equipment-icon-big">
 
@@ -514,7 +514,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-9">
+                <div class="col-lg-9">
                     <div class="row">
                         <div class="col-4">
                             <div class="equipment-item">
@@ -859,7 +859,7 @@
 <footer class="footer">
     <div class="wrapper">
         <div class="row">
-            <div class="col-5">
+            <div class="col-lg-5 col-md-7">
                 <div class="contact">
                     <h2 class="title">Контакты</h2>
                     <div class="contact-sub__title">Севастополь, <br>
