--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,7 @@
 "logged": "false"
 })
 
-<div id="intro" class="intro">
+<div  class="intro">
     <div class="wrapper">
         <div class="row">
             <div class="col-lg-6">
@@ -29,7 +29,7 @@
     </div>
 </div>
 
-<div class="info">
+<div id="info" class="info">
     <div class="wrapper">
         <div class="row">
             <div class="col-md-4">
