--- a/assets/index.html
+++ b/assets/index.html
@@ -240,7 +240,7 @@
                     <div class="doctors__item swiper-slide">
                         <div class="doctors__info">
                             <div class="doctors__info-img">
-                                <img src="img/doctor-1.jpg" alt="doctor">
+                                <img src="img/doctor-new-4.jpg" alt="doctor">
                             </div>
                             <div class="doctors__info-title">ЦИБРИК АСЯ АНАТОЛЬЕВНА
                             </div>
@@ -261,7 +261,7 @@
                     <div class="doctors__item swiper-slide">
                         <div class="doctors__info">
                             <div class="doctors__info-img">
-                                <img src="img/doctor-1.jpg" alt="doctor">
+                                <img src="img/doctor-new-3.jpg" alt="doctor">
                             </div>
                             <div class="doctors__info-title">САХНЕНКО НАТАЛЬЯ АЛЕКСАНДРОВНА</div>
                             <div class="doctors__info-sub_title">Офтальмолог
@@ -281,7 +281,7 @@
                     <div class="doctors__item swiper-slide">
                         <div class="doctors__info">
                             <div class="doctors__info-img">
-                                <img src="img/doctor-1.jpg" alt="doctor">
+                                <img src="img/doctor-new-2.jpg" alt="doctor">
                             </div>
                             <div class="doctors__info-title">КАТАЛИНА ИЛОНА ВЯЧЕСЛАВОВНА</div>
                             <div class="doctors__info-sub_title">Офтальмолог
@@ -302,7 +302,7 @@
                     <div class="doctors__item swiper-slide">
                         <div class="doctors__info">
                             <div class="doctors__info-img">
-                                <img src="img/doctor-1.jpg" alt="doctor">
+                                <img src="img/doctor-new-1.jpg" alt="doctor">
                             </div>
                             <div class="doctors__info-title">ШВЕЦ ЛЕВИЗА УМЕРОВНА</div>
                             <div class="doctors__info-sub_title">Офтальмолог
