--- a/assets/index.html
+++ b/assets/index.html
@@ -1237,7 +1237,7 @@
             <div class="sing-form">
                 <h2 class="title">Запишитесь на приём</h2>
                 <p class="desc">Или позвоните нам:
-                    +7 978 256 000 5</p>
+                    <span>+7 978 256 000 5</span></p>
                 <div class="sing-form__item">
                     <input type="text" placeholder="Ваше Имя*">
                 </div>
@@ -1277,7 +1277,7 @@
             <div class="prices__head">
                 <h2 class="title">Услуги и цены</h2>
                 <div class="prices__right">
-                    <a class="prices__pdf">
+                    <a href="Прейскурант.pdf"  download class="prices__pdf">
                         <img src="img/pdf.svg" alt="pdf">
                         Скачать прайс
                     </a>
